--- a/DevWebPhp-App/src/app/nav/nav.component.html
+++ b/DevWebPhp-App/src/app/nav/nav.component.html
@@ -1,3 +1,43 @@
-<p>
-  nav works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
+    <ul class="navbar-nav">
+      <li *ngIf="logado()" class="nav-item active">
+        <a class="nav-link" href="#">DevWebPhp</a>
+      </li>
+      <li *ngIf="logado()" class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fas fa-user"></i>&nbsp; User</a>
+      </li>
+      <li *ngIf="logado()" class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fas fa-tasks"></i>&nbsp; Request</a>
+      </li>
+      <div *ngIf="logado()">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown" dropdown>
+            <a dropdownToggle class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Vinícius
+            </a>
+            <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">
+                Perfil
+              </a>
+              <div role="separator" class="divider"></div>
+              <a class="dropdown-item" href="#">
+                Sair
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div *ngIf="!logado()">
+        <a class="btn btn-outline-primary" href="#">Entrar</a>
+      </div>
+    </ul>
+  </div>
+</nav>
