--- a/DevWebPhp-App/src/app/nav/nav.component.html
+++ b/DevWebPhp-App/src/app/nav/nav.component.html
@@ -6,7 +6,8 @@
   <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
     <ul class="navbar-nav">
       <li *ngIf="logado()" class="nav-item active">
-        <a class="nav-link" href="#">DevWebPhp</a>
+        <a class="nav-link" href="#">
+          <i class="fab fa-linux"></i>&nbsp; DevWebPhp</a>
       </li>
       <li *ngIf="logado()" class="nav-item">
         <a class="nav-link" href="#">
