--- a/DevWebPhp-App/src/app/request/request.component.html
+++ b/DevWebPhp-App/src/app/request/request.component.html
@@ -1,4 +1,12 @@
 <div class="container">
+  <div class="form-inline mr-auto">
+    <div class="form-group mb-2">
+      <input placeholder="Pesquisar" type="search" class="form-control mr-2 text-center"
+         [(ngModel)]="filtroLista"/><i class="fas fa-search"></i>
+    </div>
+  </div>
+</div>
+<div class="container">
   <table class="table  table-hover table-bordered">
     <thead class="thead-light">
       <tr>
@@ -9,8 +17,8 @@
         <th>Ações</th>
       </tr>
     </thead>
-    <tbody *ngFor="let request of requests">
-      <tr>
+    <tbody >
+      <tr *ngFor="let request of requestFiltradas">
         <td>{{request.nome}}</td>
         <td>{{request.nomeCompleto}}</td>
         <td>{{request.email}}</td>
