--- a/DevWebPhp-App/src/app/app.component.html
+++ b/DevWebPhp-App/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-nav></app-nav>
-<div class="text-center">
-  <h1>
-    Hello
+<div class="container">
+  <h1 class="text-center">
+     Hello
   </h1>
   <app-request></app-request>
 <router-outlet></router-outlet>
