--- a/DevWebPhp-App/src/app/app.component.html
+++ b/DevWebPhp-App/src/app/app.component.html
@@ -1,9 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-nav></app-nav>
 <div class="container">
-  <h1 class="text-center">
-     Hello
-  </h1>
-  <app-request></app-request>
+  <app-titulo></app-titulo>
 <router-outlet></router-outlet>
 </div>
