--- a/DevWebPhp-App/src/app/nav/nav.component.html
+++ b/DevWebPhp-App/src/app/nav/nav.component.html
@@ -6,15 +6,15 @@
   <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
     <ul class="navbar-nav">
       <li *ngIf="logado()" class="nav-item active">
-        <a class="nav-link" href="#">
+        <a class="nav-link" >
           <i class="fab fa-linux"></i>&nbsp; DevWebPhp</a>
       </li>
-      <li *ngIf="logado()" class="nav-item">
-        <a class="nav-link" href="#">
+      <li *ngIf="logado()" class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="user">
           <i class="fas fa-user"></i>&nbsp; User</a>
       </li>
-      <li *ngIf="logado()" class="nav-item">
-        <a class="nav-link" href="#">
+      <li *ngIf="logado()" class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="request">
           <i class="fas fa-tasks"></i>&nbsp; Request</a>
       </li>
       <div *ngIf="logado()">
