--- a/DevWebPhp-App/src/app/nav/nav.component.html
+++ b/DevWebPhp-App/src/app/nav/nav.component.html
@@ -3,25 +3,25 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
+  <div  *ngIf="logado()" class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
     <ul class="navbar-nav">
-      <li *ngIf="logado()" class="nav-item active">
+      <li class="nav-item active">
         <a class="nav-link" >
           <i class="fab fa-linux"></i>&nbsp; DevWebPhp</a>
       </li>
-      <li *ngIf="logado()" class="nav-item" routerLinkActive="active">
+      <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="user">
           <i class="fas fa-user"></i>&nbsp; User</a>
       </li>
-      <li *ngIf="logado()" class="nav-item" routerLinkActive="active">
+      <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="request">
           <i class="fas fa-tasks"></i>&nbsp; Request</a>
       </li>
       <div *ngIf="logado()">
         <ul class="navbar-nav">
           <li class="nav-item dropdown" dropdown>
-            <a dropdownToggle class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
+            <a dropdownToggle class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false" style="cursor: pointer;">
               Vinícius
             </a>
             <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -29,7 +29,7 @@
                 Perfil
               </a>
               <div role="separator" class="divider"></div>
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item" (click)="sair()" style="cursor: pointer;">
                 Sair
               </a>
             </div>
