--- a/DevWebPhp-App/src/app/request/request.component.html
+++ b/DevWebPhp-App/src/app/request/request.component.html
@@ -17,25 +17,37 @@
     <thead class="thead-light">
       <tr>
         <th>Nome</th>
-        <th>Nome Completo</th>
         <th>E-mail</th>
         <th>Telefone</th>
+        <th>Situação</th>
         <th>Ações</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let request of requestFiltradas">
         <td>{{request.nome}}</td>
-        <td>{{request.nomeCompleto}}</td>
         <td>{{request.email}}</td>
         <td>{{request.telefone | mask: '(000) 00000-0000'}}</td>
+        <td>
+          <div *ngIf="request.situacao == 1">
+            <button class="btn btn-success">Concluida</button>
+          </div>
+          <div *ngIf="request.situacao == 2">
+            <button class="btn btn-danger">Pendente</button>
+          </div>
+        </td>
         <td>
           <div class="btn-group">
             <button class="btn btn-secondary btn-sm" (click)="editar(templateEdit, request)" tooltip="Editar">
               <i class="fa fa-edit"></i>&nbsp; Editar</button>
             <button class="btn btn-info btn-sm" (click)="detalhes(templateDetalhes, request)" tooltip="Detalhes">
               <i class="fas fa-info-circle"></i></button>
-            <button class="btn btn-danger btn-sm" tooltip="Deletar" (click)="excluirRequest(request, confirmeDelete)">
+              <div *ngIf="request.situacao == 2">
+            <button class="btn btn-success btn-sm" tooltip="Autorizar" (click)="confirmarAutorizacao(templateAutorizar, request)">
+              <i class="fas fa-lock-open"></i>
+            </button>
+          </div>
+              <button class="btn btn-danger btn-sm" tooltip="Deletar" (click)="excluirRequest(request, confirmeDelete)">
               <i class="fa fa-eraser"></i>&nbsp; Deletar</button>
           </div>
         </td>
@@ -420,3 +432,105 @@
     </div>
   </div>
 </div>
+
+<!-- Modal Confirma Autorização -->
+<div bsModal #templateAutorizar="bs-modal" class="modal fade" tabindex="-1" role="dialog"
+  aria-labelledby="dialog-sizes-name1">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 id="dialog-sizes-name1" class="modal-title pull-left">Editar</h4>
+        <button type="button" class="close pull-right" (click)="templateAutorizar.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <form [formGroup]="form">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label>Nome</label>
+              <input autofocus type="text"
+                [ngClass]="{'is-invalid': form.get('nome').errors && form.get('nome').touched}" class="form-control"
+                formControlName="nome" placeholder="Nome">
+              <div *ngIf="form.get('nome').hasError('required') && form.get('nome').touched" class="invalid-feedback">
+                Campo Obrigatório
+              </div>
+              <div *ngIf="form.get('nome').hasError('minlength') && form.get('nome').touched" class="invalid-feedback">
+                Campo deve ter entre 2 a 130 caracteres
+              </div>
+              <div *ngIf="form.get('nome').hasError('maxlength') && form.get('nome').touched" class="invalid-feedback">
+                Campo deve ter entre 2 a 130 caracteres
+              </div>
+            </div>
+            <div class="form-group col-md-6">
+              <label>Nome Completo</label>
+              <input type="text"
+                [ngClass]="{'is-invalid': form.get('nomeCompleto').errors && form.get('nomeCompleto').touched}"
+                class="form-control" formControlName="nomeCompleto" placeholder="Nome Completo">
+              <div *ngIf="form.get('nomeCompleto').hasError('required') && form.get('nomeCompleto').touched"
+                class="invalid-feedback">
+                Campo Obrigatório
+              </div>
+              <div *ngIf="form.get('nomeCompleto').hasError('minlength') && form.get('nomeCompleto').touched"
+                class="invalid-feedback">
+                Campo deve ter entre 6 a 170 caracteres
+              </div>
+              <div *ngIf="form.get('nomeCompleto').hasError('maxlength') && form.get('nomeCompleto').touched"
+                class="invalid-feedback">
+                Campo deve ter entre 6 a 170 caracteres
+              </div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label>E-mail</label>
+              <input type="text" [ngClass]="{'is-invalid': form.get('email').errors && form.get('email').touched}"
+                class="form-control" formControlName="email" placeholder="E-mail">
+              <div *ngIf="form.get('email').hasError('required') && form.get('email').touched" class="invalid-feedback">
+                Campo Obrigatório
+              </div>
+              <div *ngIf="form.get('email').hasError('email') && form.get('email').touched" class="invalid-feedback">
+                E-mail deve ser valido.
+              </div>
+            </div>
+            <div class="form-group col-md-6">
+              <label>Senha</label>
+              <input type="password" [ngClass]="{'is-invalid': form.get('senha').errors && form.get('senha').touched}"
+                class="form-control" formControlName="senha" placeholder="Senha">
+              <div *ngIf="form.get('senha').hasError('minlength') && form.get('senha').touched"
+                class="invalid-feedback">
+                Senha deve ter entre 4 a 12 caracteres!
+              </div>
+              <div *ngIf="form.get('senha').hasError('maxlength') && form.get('senha').touched"
+                class="invalid-feedback">
+                Senha deve ter entre 4 a 12 caracteres!
+              </div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label>Telefone</label>
+              <input type="text" mask="(000) 00000-0000"
+                [ngClass]="{'is-invalid': form.get('telefone').errors && form.get('telefone').touched}"
+                class="form-control" formControlName="telefone" placeholder="(000) 00000-0000">
+              <div *ngIf="form.get('telefone').hasError('required') && form.get('telefone').touched"
+                class="invalid-feedback">
+                Campo Obrigatório
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer d-flex">
+        <button class="btn btn-secondary" (click)="templateAutorizar.hide()">
+          Fechar
+        </button>
+        <button class="btn btn-success ml-auto" [disabled]="!form.valid" (click)="autorizarUsuario(templateAutorizar)">
+          Autorizar Usuario
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
