--- a/DevWebPhp-App/src/app/key/key.component.html
+++ b/DevWebPhp-App/src/app/key/key.component.html
@@ -1,3 +1,36 @@
-<p>
-  key works!
-</p>
+<app-titulo class="text-center" [titulo]="titulo"></app-titulo>
+<body class="text-center">
+  <br><br><br><br>
+<div>
+    <main role="main" class="inner cover">
+      <h1 class="cover-heading">Chave de Acesso ao Wi-Fi.</h1>
+      <p class="lead">Essa chave de acesso somente podera ser compartilhada entre sua mente. Qualquer compartilhameno indevido o usuario sera desativado!</p>
+      <p class="lead">
+        <a class="btn btn-lg btn-info" (click)="key(templateKey)">Acessar Chave</a>
+      </p>
+    </main>
+  </div>
+
+  <!-- Modal Confirmar Delete -->
+<div bsModal #templateKey="bs-modal" class="modal fade" tabindex="-1" role="dialog"
+aria-labelledby="dialog-sizes-name2">
+<div class="modal-dialog modal-sm">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h4 id="dialog-sizes-name2" class="modal-title pull-left">Chave</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="templateKey.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <h3>Chave</h3>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-block btn-secondary" (click)="templateKey. hide()">
+        Fechar
+      </button>
+    </div>
+  </div>
+</div>
+</div>
+</body>
