modal perfil criada

--- a/DevWebPhp-App/src/app/key/key.component.html
+++ b/DevWebPhp-App/src/app/key/key.component.html
@@ -6,12 +6,13 @@
       <h1 class="cover-heading">Chave de Acesso ao Wi-Fi.</h1>
       <p class="lead">Essa chave de acesso somente podera ser compartilhada entre sua mente. Qualquer compartilhameno indevido o usuario sera desativado!</p>
       <p class="lead">
-        <a class="btn btn-lg btn-info" (click)="key(templateKey)">Acessar Chave</a>
+        <a class="btn btn-outline-info btn-lg" (click)="key(templateKey)">
+          <i class="fa fa-key " aria-hidden="true"></i>&nbsp; Acessar Chave</a>
       </p>
     </main>
   </div>
 
-  <!-- Modal Confirmar Delete -->
+  <!-- Modal Chave Key -->
 <div bsModal #templateKey="bs-modal" class="modal fade" tabindex="-1" role="dialog"
 aria-labelledby="dialog-sizes-name2">
 <div class="modal-dialog modal-sm">
